Added ndef intent filter

--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="net.yoik.cordova.plugins.intentfilter"
-        version="0.0.1">
+        version="0.0.2">
 
   <name>Android Listen to url Intent</name>
 
@@ -21,13 +21,18 @@
 
   <!-- android -->
   <platform name="android">
-   
+
     <config-file target="AndroidManifest.xml" parent="/*/application/activity">
       <intent-filter>
-        <data android:scheme="$URL_SCHEME" android:host="$HOST_NAME" android:pathPattern="/.*"/>/>
+        <data android:scheme="$URL_SCHEME" android:host="$HOST_NAME" android:pathPattern=".*"/>
         <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE" />
+      </intent-filter>
+      <intent-filter>
+        <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <data android:scheme="$URL_SCHEME" android:host="$HOST_NAME" android:pathPattern=".*"/>
       </intent-filter>
     </config-file>
   </platform>
